--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "ws": "~0.8.0"
+    "ws": "~0.8.0",
+    "express": "~4.13.3"
   },
   "engines": {
     "node": "0.12.2"
