--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "ws": "~0.8.0",
-    "express": "~4.13.3"
+    "express": "~4.13.3",
+    "mongoose": "~4.1.3"
   },
   "engines": {
     "node": "0.12.2"
